--- a/Exams/ExamPrep/02. DigiMedia/css/responsive.css
+++ b/Exams/ExamPrep/02. DigiMedia/css/responsive.css
@@ -1,3 +1,63 @@
-@media (width <= 600px) {
-
+@media screen and (max-width: 600px) {
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar .navbar-brand {
+    margin-right: unset;
+  }
+  .hero {
+    text-align: center;
+  }
+  article.hero-btns {
+    margin-bottom: 50px;
+  }
+  .hero h1 {
+    margin-top: 50px;
+  }
+  .hero > img {
+    display: none;
+  }
+  .hero-btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .services .row h2 {
+    text-align: center;
+  }
+  .hero-btns.service-btn {
+    margin-bottom: 50px;
+  }
+  .services .service-box {
+    width: 400px;
+  }
+  .about {
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  .about img {
+    margin-bottom: 70px;
+  }
+  .contact{
+    text-align: center;
+  }
+  .contact .hero-btns
+  {
+    display: none;
+  }
+  footer .contact-nav
+  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
